@@ -7,20 +7,31 @@ import javax.swing.JLabel;
 
 import tst.PointType;
 
+/**
+ * Klasa Bonus reprezentuje pojawiaj¹cy siê na planszy bonus który po
+ * podniesieniu daje graczowi czasowy modyfikator
+ * ma on rozmiar 3x3 na planszy
+ * wystepuje w 3 odmianach, reprezentowanych polami na planszy
+ */
 public class Bonus {
-	static ImageIcon[] images = { new ImageIcon("bonusOS.jpg"), new ImageIcon("bonusNT.png"),
+	private static ImageIcon[] images = { new ImageIcon("bonusOS.jpg"), new ImageIcon("bonusNT.png"),
 			new ImageIcon("bonusS.jpg") };
 
-	Point location;
-	JLabel icon;
-	PointType boardPoint;
-	PointType boardOnLinePoint;
-
+	private Point location;
+	private JLabel icon;
+	private PointType boardPoint;
+	private PointType boardOnLinePoint;
+/**
+ * Kostruktor od razu zaznacza bonus na planszy i rysuje go w okienu
+ * @param p polozenie na planszy
+ * @param board plansza gry
+ * @param boardPoint reprezentacja rozdzaju bonusu
+ */
 	Bonus(Point p, PointType[][] board, PointType boardPoint) {
 		this.boardPoint = boardPoint;
 		adjustOnLinePoint(boardPoint);
 		this.location = p;
-		GameLoop.bonuses.add(this);
+		GameTicker.bonuses.add(this);
 		this.icon = drawBonus(this.location);
 		putOnBoard(p, board, boardPoint);
 	}
@@ -36,7 +47,10 @@ public class Bonus {
 			}
 		}
 	}
-
+/**
+ * jesli pod Bonusem znajduje sie linia to jest to zapamietane
+ * @param boardPoint polozenie Bonusu
+ */
 	private void adjustOnLinePoint(PointType boardPoint) {
 		if (boardPoint == PointType.REVERSE_STEERING) {
 			boardOnLinePoint = PointType.REVERSE_STEERING_ON_LINE;
@@ -59,17 +73,21 @@ public class Bonus {
 			i = 2;
 		JLabel icon = new JLabel(Bonus.images[i]);
 		icon.setBounds(10 * (p.x - 1), 10 * (p.y - 1), 30, 30);
-		GameLoop.panel.add(icon, new Integer(1));
+		GameWindow.panel.add(icon, Integer.valueOf(1));
 		return icon;
 	}
-
+	/**
+	 * metoda usuwa Bonus znajduj¹cy siê na danym polu planszy
+	 * @param p polozenie punktu planszy
+	 * @param board plansza gry
+	 */
 	static void removeBonus(Point p, PointType[][] board) {
-		for (Bonus b : GameLoop.bonuses) {
+		for (Bonus b : GameTicker.bonuses) {
 			if (Math.abs(b.location.x - p.x) < 2 && Math.abs(b.location.y - p.y) < 2) {
-				GameLoop.panel.remove(b.icon);
-				GameLoop.panel.repaint();
+				GameWindow.panel.remove(b.icon);
+				GameWindow.panel.repaint();
 				b.removeBonusBoard(board);
-				GameLoop.bonuses.remove(b);
+				GameTicker.bonuses.remove(b);
 				break;
 			}
 		}
@@ -91,6 +109,14 @@ public class Bonus {
 		return board[this.location.x + i][this.location.y + j] == PointType.REVERSE_STEERING_ON_LINE
 				|| board[this.location.x + i][this.location.y + j] == PointType.UNTOUCHABLE_ON_LINE
 				|| board[this.location.x + i][this.location.y + j] == PointType.SPEED_ON_LINE;
+	}
+
+	public JLabel getIcon() {
+		return icon;
+	}
+
+	public PointType getBoardOnLinePoint() {
+		return boardOnLinePoint;
 	}
 
 }
